# stock-data-analysis-dockerized-microservice

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cert.pem  cmake_install.cmake  key.pem
include/: data_fetcher.h  data_processor.h
minimal_client/: CMakeLists.txt  main.cpp
src/: data_fetcher.cpp  data_fetcher.h  data_processor.cpp  data_processor.h  main.cpp
